--- a/action.yml
+++ b/action.yml
@@ -64,7 +64,29 @@ runs:
               echo pull
              
               cd ..
+               cd cdn
               
+              git init
+              
+              git remote add origin https://${{ inputs.username }}:${{ inputs.token }}@github.com/${{ inputs.username }}/cdn.git -m main
+              git fetch
+              echo fetch
+              git branch -m main
+              echo branch
+              echo temp >log.txt
+              git add *  */*
+              git commit -m temp
+              
+              git branch --set-upstream-to=origin 
+              echo branch 2
+              git remote -v
+              echo test
+              git fetch
+              echo fetch
+              git pull --rebase
+              echo pull
+             
+              cd ..
               if [ true ==  ${{ inputs.useyarn }} ]; then yarn install --frozen-lockfile; else npm i; fi
               if [ true ==  ${{ inputs.useyarn }} ]; then yarn build; else npm run build; fi
            
@@ -72,6 +94,14 @@ runs:
               git push
               cd dist
               ln -s index.html 404.html
+              if [ "none" !=  ${{ inputs.cname }} ]; then echo '${{ inputs.cname }}' > CNAME; fi
+              
+              git add -A
+              git commit -m '${{ inputs.gitmsg }}'
+              if ! git diff --quiet remotes/origin/HEAD; then   git push ; fi
+              cd ..
+              cd cdn
+              
               if [ "none" !=  ${{ inputs.cname }} ]; then echo '${{ inputs.cname }}' > CNAME; fi
               
               git add -A
